# platform.framework.native.jsnative

./: OAOBqqqqq:q!  .gitignore  CMakeLists.txt
appfw/: CMakeLists.txt  package.json
appfw/lib/: appfw.js
appfw/src/: appfw.cc  appfw.h  appfw_native_node.cc
arguments-validator/: CMakeLists.txt  validator.js
cli/lib/: create.js  help.js  jsn_error.js  list.js  remove.js  shell_util.js
cli/tizen-app-template/: index.js  pkgid.appid
examples/how-to/how-to-oop/: how-to-implement-inheritance.js  how-to-make-class.js  how-to-make-private-property.js
examples/how-to/how-to-sync-js-object-and-native-object-lifecycle/: build.gyp  package.json  player_api.js  player_extension.cc  player_extension.h
examples/how-to/how-to-sync-js-object-and-native-object-lifecycle/packaging/: player.spec
examples/modules/v8/tizen_power/: CMakeLists.txt  main.js  package.json
examples/modules/v8/tizen_power/packaging/: tizen_power.spec
examples/modules/v8/tizen_power/src/: dbus_operation.cc  dbus_operation.h  power_manager.cc  power_manager.h  power_platform_proxy.cc  power_platform_proxy.h  tizen_power_native.cc  tizen_power_native.h
examples/modules/xwalk/echo/: echo_api.js  echo_extension.cc  package.json
examples/modules/xwalk/echo/packaging/: echo.spec
examples/modules/xwalk/echo/xwalk/: build.gyp
examples/modules/xwalk/tizen_power/: package.json
examples/modules/xwalk/tizen_power/packaging/: tizen_power.spec
gcontext/: CMakeLists.txt  package.json
jsn-cli/: package.json
jsn-cli/lib/: build.js  cli.js  create.js  help.js  jsn_error.js  list.js  parser.js  remove.js  shell_util.js  sign.js
jsn-cli/tizen-app-template/: index.js  pkgid.appid  tizen-manifest.xml
jsnative/: CMakeLists.txt  main.js
modules/: CMakeLists.txt
modules/appfw/: CMakeLists.txt
modules/appfw/lib/: appfw.js
modules/appfw/src/: appfw.cc  appfw_native_node.cc
modules/arguments-validator/: CMakeLists.txt  package.json  validator.js
modules/gcontext/: CMakeLists.txt
modules/gcontext/src/: gcontext.cc  gcontext.h
modules/jsnative/: CMakeLists.txt  main.js  package.json
modules/node-dlog/: CMakeLists.txt  package.json
modules/node-dlog/src/: dlog.cc
modules/node-xwalk/: CMakeLists.txt  README.md  package.json
modules/node-xwalk/examples/echo/: Makefile
modules/node-xwalk/lib/: loader.js
modules/node-xwalk/src/: extension.cc  extension.h  extension_adapter.cc  extension_adapter.h  log.h  native_binding.cc
modules/privileges/: CMakeLists.txt  package.json
modules/privileges/lib/: privileges.js
modules/privileges/src/: log.h  privileges_native.cc  privileges_native.h
modules/reaper/: CMakeLists.txt  package.json
modules/reaper/examples/: how_to_use.js
modules/reaper/src/: reaper.cc
modules/tizen-alarm/: CMakeLists.txt  alarm_extension.cc  alarm_extension.h  package.json  tizen-alarm_api.js
modules/tizen-app-control/: CMakeLists.txt  package.json  tizen-app-control.js
modules/tizen-app-manager/: CMakeLists.txt  app_manager_extension.cc  app_manager_extension.h  package.json  tizen-app-manager_api.js
modules/tizen-app-preference/: CMakeLists.txt  app_preference_extension.cc  app_preference_extension.h  package.json  tizen-app-preference_api.js
modules/tizen-application/: CMakeLists.txt  appfw.cc  appfw.h  build.gyp  package.json  tizen-application.js  tizen-application_api.js  ui_app_extension.cc  ui_app_extension.h
modules/tizen-application-common/: CMakeLists.txt  app_common_extension.cc  app_common_extension.h  build.gyp  package.json  tizen-application-common.js  tizen-application-common_api.js
modules/tizen-device/: CMakeLists.txt  device_extension.cc  device_extension.h  package.json  tizen-device_api.js
modules/tizen-message-port/: CMakeLists.txt  message_port_extension.cc  message_port_extension.h  package.json  tizen-message-port_api.js
modules/tizen-notification/: CMakeLists.txt  notification_extension.cc  notification_extension.h  package.json  picojson.h  tizen-notification_api.js
modules/tizen-package-manager/: CMakeLists.txt  package.json  test-package.js  tizen-package-info_api.js  tizen-package-manager_api.js  tizen-package-manager_enumerations.js  tizen_package_manager_extension.cc  tizen_package_manager_extension.h
modules/tizen-power/: CMakeLists.txt  package.json
modules/tizen-power/src/: dbus_operation.cc  power_manager.cc  power_platform_proxy.cc
modules/tizen-power/src/js/: enum.js  power_manager.js
modules/tizen-prelauncher/: CMakeLists.txt  jsnative-loader  node_prelauncher.cc  package.json  prelauncher.cc  prelauncher.h  tizen-prelauncher.js
modules/tizen-sound-manager/: CMakeLists.txt  build.gyp  package.json  picojson.h  sound_manager_extension.cc  sound_manager_extension.h  sound_manager_util.cc  sound_manager_util.h  soundmanager.cc  soundmanager.h  soundmanager_api.js  soundmanager_extension.cc  soundmanager_extension.h  soundmanger_util .cc  soundmanger_util.h  tizen-sound-manager_api.js
modules/tizen-sound-manager/packaging/: soundmanager.spec
modules/tizen-storage/: CMakeLists.txt  arch.txt  description.txt  package.json  readme  storage_extension.cc  storage_extension.h  test.js  tizen-storage_api.js
modules/tizen-system-info/: CMakeLists.txt  package.json  system_info_extension.cc  system_info_extension.h  tizen-system-info_api.js
modules/tizen-system-runtime-info/: CMakeLists.txt  package.json  system_runtime_info_extension.cc  system_runtime_info_extension.h  tizen-system-runtime-info_api.js
modules/tizen-system-setting/: CMakeLists.txt  package.json  system_setting_api.js  system_setting_extension.cc  system_setting_extension.h  system_setting_manager.cc  system_setting_manager.h
node-xwalk/: CMakeLists.txt  binding.gyp
node-xwalk/examples/echo/: echo.js
node-xwalk/examples/echo_binary/: Makefile  echo2.js
node-xwalk/lib/: loader.js
node-xwalk/packaging/: node-xwalk.spec
node-xwalk/src/: extension.cc  native_binding.h
packaging/: jsnative.spec
privileges/: CMakeLists.txt
privileges/lib/: privileges.js
privileges/src/: privileges_native.cc
(+11 files in other folders)
