SET(TARGET_APPFW "appfw")
SET(TARGET_APPFW_NATIVE "appfw-native")
SET(TARGET_APPFW_SRC ${PROJECT_SOURCE_DIR}/appfw)

# Copy Project
INSTALL(FILES
    ${TARGET_APPFW_SRC}/package.json
    DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_APPFW}
)

INSTALL(FILES
    ${TARGET_APPFW_SRC}/lib/appfw.js
    DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_APPFW}/lib
)

# Native Binding Module
PKG_CHECK_MODULES(TARGET_APPFW_NATIVE_DEPS REQUIRED
    appcore-efl aul dlog nodejs
)
INCLUDE_DIRECTORIES (
  ${TARGET_APPFW_SRC}/src
  ${TARGET_APPFW_NATIVE_DEPS_INCLUDE_DIRS}
)
ADD_LIBRARY(${TARGET_APPFW_NATIVE} MODULE
  ${TARGET_APPFW_SRC}/src/appfw.cc
  ${TARGET_APPFW_SRC}/src/appfw_native_node.cc
)
SET_TARGET_PROPERTIES(${TARGET_APPFW_NATIVE} PROPERTIES PREFIX "" SUFFIX ".node")
TARGET_LINK_LIBRARIES(${TARGET_APPFW_NATIVE}
    ${TARGET_APPFW_NATIVE_DEPS_LIBRARIES}
)
INSTALL(TARGETS ${TARGET_APPFW_NATIVE} DESTINATION
        ${GLOBAL_NODE_MODULE_PATH}/${TARGET_APPFW}/build/Release)
