SET(TARGET_ARGVALIDATOR "arguments-validator")
SET(TARGET_ARGVALIDATOR_SRC ${PROJECT_SOURCE_DIR}/${TARGET_ARGVALIDATOR})
# Copy Project
INSTALL(FILES
    ${TARGET_ARGVALIDATOR_SRC}/package.json
    DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_ARGVALIDATOR}
)

INSTALL(FILES
    ${TARGET_ARGVALIDATOR_SRC}/validator.js
    DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_ARGVALIDATOR}
)
