SET(TARGET_GCONTEXT "gcontext")
SET(TARGET_GCONTEXT_NATIVE "gcontext")
SET(TARGET_GCONTEXT_SRC ${PROJECT_SOURCE_DIR}/gcontext)

# Copy Project
INSTALL(FILES
    ${TARGET_GCONTEXT_SRC}/package.json
    DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_GCONTEXT}
)


# Native Binding Module
PKG_CHECK_MODULES(TARGET_GCONTEXT_NATIVE_DEPS REQUIRED
    dlog glib-2.0 gobject-2.0 nodejs
)
INCLUDE_DIRECTORIES (
  ${TARGET_GCONTEXT_SRC}/src
  ${TARGET_GCONTEXT_NATIVE_DEPS_INCLUDE_DIRS}
)
ADD_LIBRARY(${TARGET_GCONTEXT_NATIVE} MODULE
  ${TARGET_GCONTEXT_SRC}/src/gcontext.cc
)
SET_TARGET_PROPERTIES(${TARGET_GCONTEXT_NATIVE} PROPERTIES PREFIX "" SUFFIX ".node")
TARGET_LINK_LIBRARIES(${TARGET_GCONTEXT_NATIVE}
    ${TARGET_GCONTEXT_NATIVE_DEPS_LIBRARIES}
)
INSTALL(TARGETS ${TARGET_GCONTEXT_NATIVE} DESTINATION
        ${GLOBAL_NODE_MODULE_PATH}/${TARGET_GCONTEXT}/build/Release)
