SET(TARGET_JSNATIVE "jsnative")
SET(TARGET_JSNATIVE_SRC ${PROJECT_SOURCE_DIR}/${TARGET_JSNATIVE})

# Copy Project
INSTALL(FILES
    ${TARGET_JSNATIVE_SRC}/package.json
    DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_JSNATIVE}
)

INSTALL(FILES
    ${TARGET_JSNATIVE_SRC}/main.js
    DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_JSNATIVE}
)
