ADD_SUBDIRECTORY(jsnative)
ADD_SUBDIRECTORY(gcontext)
ADD_SUBDIRECTORY(node-dlog)
ADD_SUBDIRECTORY(node-xwalk)
ADD_SUBDIRECTORY(reaper)

ADD_SUBDIRECTORY(tizen-app-control)
ADD_SUBDIRECTORY(tizen-application)
ADD_SUBDIRECTORY(tizen-application-common)
ADD_SUBDIRECTORY(tizen-app-preference)
ADD_SUBDIRECTORY(tizen-sound-manager)
ADD_SUBDIRECTORY(tizen-notification)
ADD_SUBDIRECTORY(tizen-message-port)
ADD_SUBDIRECTORY(tizen-device)
ADD_SUBDIRECTORY(tizen-system-setting)
ADD_SUBDIRECTORY(tizen-alarm)
ADD_SUBDIRECTORY(tizen-app-manager)
ADD_SUBDIRECTORY(tizen-package-manager)
ADD_SUBDIRECTORY(tizen-storage)
