SET(TARGET_XWALK "node-xwalk")
SET(TARGET_XWALK_NATIVE "native")
SET(TARGET_XWALK_SRC ${PROJECT_SOURCE_DIR}/node-xwalk)

# Copy Project
INSTALL(FILES
    ${TARGET_XWALK_SRC}/package.json
    DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_XWALK}
)

INSTALL(FILES
    ${TARGET_XWALK_SRC}/lib/loader.js
    DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_XWALK}/lib
)

# Native Binding Module
PKG_CHECK_MODULES(TARGET_XWALK_NATIVE_DEPS REQUIRED
    nodejs
)

INCLUDE_DIRECTORIES (
  ${TARGET_XWALK_SRC}/src
  ${TARGET_XWALK_NATIVE_DEPS_INCLUDE_DIRS}
)
ADD_LIBRARY(${TARGET_XWALK_NATIVE} MODULE
  ${TARGET_XWALK_SRC}/src/native_binding.cc
  ${TARGET_XWALK_SRC}/src/extension.cc
  ${TARGET_XWALK_SRC}/src/extension_adapter.cc
)
SET_TARGET_PROPERTIES(${TARGET_XWALK_NATIVE} PROPERTIES PREFIX "" SUFFIX ".node")
INSTALL(TARGETS ${TARGET_XWALK_NATIVE} DESTINATION
        ${GLOBAL_NODE_MODULE_PATH}/${TARGET_XWALK}/build/Release)

