SET(TARGET_PRIVILEGES "privileges")
SET(TARGET_PRIVILEGES_NATIVE "privileges_native")
SET(TARGET_PRIVILEGES_SRC ${PROJECT_SOURCE_DIR}/privileges)

# Copy Project
INSTALL(FILES
    ${TARGET_PRIVILEGES_SRC}/package.json
    DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_PRIVILEGES}
)

INSTALL(FILES
    ${TARGET_PRIVILEGES_SRC}/lib/privileges.js
    DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_PRIVILEGES}/lib
)

# Native Binding Module
PKG_CHECK_MODULES(TARGET_PRIVILEGES_NATIVE_DEPS REQUIRED
    nodejs
    cynara-client libsmack
    pkgmgr-info capi-appfw-app-manager
)
INCLUDE_DIRECTORIES (
  ${TARGET_PRIVILEGES_SRC}/src
  ${TARGET_PRIVILEGES_NATIVE_DEPS_INCLUDE_DIRS}
)
ADD_LIBRARY(${TARGET_PRIVILEGES_NATIVE} MODULE
  ${TARGET_PRIVILEGES_SRC}/src/privileges_native.cc
)
SET_TARGET_PROPERTIES(${TARGET_PRIVILEGES_NATIVE} PROPERTIES PREFIX "" SUFFIX ".node")
TARGET_LINK_LIBRARIES(${TARGET_PRIVILEGES_NATIVE}
    ${TARGET_PRIVILEGES_NATIVE_DEPS_LIBRARIES}
)
INSTALL(TARGETS ${TARGET_PRIVILEGES_NATIVE} DESTINATION
        ${GLOBAL_NODE_MODULE_PATH}/${TARGET_PRIVILEGES}/build/Release)
