SET(TARGET_APPFW "appfw")
SET(TARGET_APPFW_NATIVE "appfw_native")

# Copy Project
INSTALL(FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/package.json
    DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_APPFW}
)

INSTALL(FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/lib/appfw.js
    DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_APPFW}/lib
)

# Native Binding Module
PKG_CHECK_MODULES(TARGET_APPFW_NATIVE_DEPS REQUIRED
    appcore-efl aul dlog nodejs
)
INCLUDE_DIRECTORIES (
  ${CMAKE_CURRENT_SOURCE_DIR}/src
  ${TARGET_APPFW_NATIVE_DEPS_INCLUDE_DIRS}
)
ADD_LIBRARY(${TARGET_APPFW_NATIVE} MODULE
  ${CMAKE_CURRENT_SOURCE_DIR}/src/appfw.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/src/appfw_native_node.cc
)
SET_TARGET_PROPERTIES(${TARGET_APPFW_NATIVE} PROPERTIES PREFIX "" SUFFIX ".node")
TARGET_LINK_LIBRARIES(${TARGET_APPFW_NATIVE}
    ${TARGET_APPFW_NATIVE_DEPS_LIBRARIES}
)
INSTALL(TARGETS ${TARGET_APPFW_NATIVE} DESTINATION
        ${GLOBAL_NODE_MODULE_PATH}/${TARGET_APPFW}/build/Release)
