SET(TARGET_APPFW "appfw")
SET(TARGET_APPFW_NATIVE "appfw_native")

ADD_MODULE(${TARGET_APPFW_NATIVE} NODE
  SRCS
    src/appfw.cc
    src/appfw_native_node.cc
  INCLUDES
    src
  DEPENDS
    appcore-efl aul dlog
)

# Copy Project
INSTALL(FILES package.json
  DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_APPFW}
)

INSTALL(FILES lib/appfw.js
  DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_APPFW}/lib
)

INSTALL(TARGETS ${TARGET_APPFW_NATIVE}
  DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_APPFW}/build/Release
)
