SET(TARGET_ARGVALIDATOR "arguments-validator")

# Copy Project
INSTALL(FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/package.json
    DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_ARGVALIDATOR}
)

INSTALL(FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/validator.js
    DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_ARGVALIDATOR}
)
