SET(TARGET_GCONTEXT "gcontext")

# Native Module
ADD_MODULE(${TARGET_GCONTEXT} NODE
  SRCS
    src/gcontext.cc
  INCLUDES
    src
  DEPENDS
    dlog glib-2.0 gobject-2.0
)

# Copy Project
INSTALL(FILES package.json
  DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_GCONTEXT}
)

INSTALL(TARGETS ${TARGET_GCONTEXT}
  DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_GCONTEXT}/build/Release
)

