SET(TARGET_DLOG "node-dlog")
SET(TARGET_DLOG_NATIVE "node-dlog")

# Copy Project
INSTALL(FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/package.json
    DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_DLOG}
)


# Native Binding Module
PKG_CHECK_MODULES(TARGET_DLOG_NATIVE_DEPS REQUIRED
    dlog nodejs
)
INCLUDE_DIRECTORIES (
  ${CMAKE_CURRENT_SOURCE_DIR}/src
  ${TARGET_DLOG_NATIVE_DEPS_INCLUDE_DIRS}
)
ADD_LIBRARY(${TARGET_DLOG_NATIVE} MODULE
  ${CMAKE_CURRENT_SOURCE_DIR}/src/dlog.cc
)
SET_TARGET_PROPERTIES(${TARGET_DLOG_NATIVE} PROPERTIES PREFIX "" SUFFIX ".node")
TARGET_LINK_LIBRARIES(${TARGET_DLOG_NATIVE}
    ${TARGET_DLOG_NATIVE_DEPS_LIBRARIES}
)
INSTALL(TARGETS ${TARGET_DLOG_NATIVE} DESTINATION
        ${GLOBAL_NODE_MODULE_PATH}/${TARGET_DLOG}/build/Release)
