SET(TARGET_DLOG "node-dlog")

# Native Module
ADD_MODULE(${TARGET_DLOG} NODE
  SRCS
    src/dlog.cc
  INCLUDES
    src
  DEPENDS
    dlog
)

# Copy Project
INSTALL(FILES package.json
  DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_DLOG}
)

INSTALL(TARGETS ${TARGET_DLOG}
  DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_DLOG}/build/Release
)

