SET(TARGET_XWALK "node-xwalk")
SET(TARGET_XWALK_NATIVE "native")

# Copy Project
INSTALL(FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/package.json
    DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_XWALK}
)

INSTALL(FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/lib/loader.js
    DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_XWALK}/lib
)

# Native Binding Module
PKG_CHECK_MODULES(TARGET_XWALK_NATIVE_DEPS REQUIRED
    dlog nodejs
)

INCLUDE_DIRECTORIES (
  ${CMAKE_CURRENT_SOURCE_DIR}/src
  ${TARGET_XWALK_NATIVE_DEPS_INCLUDE_DIRS}
)
ADD_LIBRARY(${TARGET_XWALK_NATIVE} MODULE
  ${CMAKE_CURRENT_SOURCE_DIR}/src/native_binding.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/src/extension.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/src/extension_adapter.cc
)
SET_TARGET_PROPERTIES(${TARGET_XWALK_NATIVE} PROPERTIES PREFIX "" SUFFIX ".node")
TARGET_LINK_LIBRARIES(${TARGET_XWALK_NATIVE}
    ${TARGET_XWALK_NATIVE_DEPS_LIBRARIES}
)
INSTALL(TARGETS ${TARGET_XWALK_NATIVE} DESTINATION
        ${GLOBAL_NODE_MODULE_PATH}/${TARGET_XWALK}/build/Release)

