SET(TARGET_REAPER "reaper")
SET(TARGET_REAPER_NATIVE "reaper")

# Copy Project
INSTALL(FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/package.json
    DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_REAPER}
)


# Native Binding Module
PKG_CHECK_MODULES(TARGET_REAPER_NATIVE_DEPS REQUIRED
    dlog nodejs
)
INCLUDE_DIRECTORIES (
  ${CMAKE_CURRENT_SOURCE_DIR}/src
  ${TARGET_REAPER_NATIVE_DEPS_INCLUDE_DIRS}
)
ADD_LIBRARY(${TARGET_REAPER_NATIVE} MODULE
  ${CMAKE_CURRENT_SOURCE_DIR}/src/reaper.cc
)
SET_TARGET_PROPERTIES(${TARGET_REAPER_NATIVE} PROPERTIES PREFIX "" SUFFIX ".node")
TARGET_LINK_LIBRARIES(${TARGET_REAPER_NATIVE}
    ${TARGET_REAPER_NATIVE_DEPS_LIBRARIES}
)
INSTALL(TARGETS ${TARGET_REAPER_NATIVE} DESTINATION
        ${GLOBAL_NODE_MODULE_PATH}/${TARGET_REAPER}/build/Release)
