SET(TARGET_REAPER "reaper")
SET(TARGET_REAPER_NATIVE "reaper")

# Native Module
ADD_MODULE(${TARGET_REAPER_NATIVE} NODE
  SRCS
    src/reaper.cc
  INCLUDES
    src
  DEPENDS
    dlog
)

# Copy Project
INSTALL(FILES package.json
  DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_REAPER}
)

INSTALL(TARGETS ${TARGET_REAPER_NATIVE}
  DESTINATION ${GLOBAL_NODE_MODULE_PATH}/${TARGET_REAPER}/build/Release
)